# xddb

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/tests/: test_client.py  test_lcg.py
src/xddb/: __init__.py  client.py  lcg.py  quick_battle.py
tests/: test_client.py  test_escort.py
xddb/: __init__.py  advance_escort.py  client.py  quick_battle.py  quick_battle_seed_searcher.py
