[tool.poetry]
name = "xddb"
version = "0.1.0"
description = ""
authors = ["yatsuna_827 <@sub_827>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
lcg = {git = "https://github.com/yatsuna827/LCG.py", rev = "main"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
